comments service implementation